kubernetes-src-code/k8s/app.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: usermgmt-webapp
  labels:
    app: usermgmt-webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: usermgmt-webapp
  template:  
    metadata:
      labels: 
        app: usermgmt-webapp
    spec:
      containers:
        - name: usermgmt-webapp
          image: nouranahmed/usermgmt:v2
          imagePullPolicy: Always
          ports: 
            - containerPort: 8080           
---
apiVersion: v1
kind: Service
metadata:
  name: nodeport-service
  labels: 
    app: usermgmt-webapp
spec:
  type: NodePort
  selector:
    app: usermgmt-webapp
  ports: 
    - port: 8070
      targetPort: 8080
#LoadBalancer
